--- a/pm-app/package.json
+++ b/pm-app/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/supabase-js": "^2.39.7",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
